x86: remove PVHv1 code
This removal applies to both the hypervisor and the toolstack side of PVHv1.

Note that on the toolstack side a new PVH domain type is introduced to libxl.
The "none" device model version is removed, together with the "pvh" field in
the create info struct (the defines announcing those features are also removed
from libxl.h). The canonical way to create a PVH guest in libxl is to add
"pvh=1" to the guest config file.

Signed-off-by: Roger Pau Monné <roger.pau@citrix.com>
Reviewed-by: Andrew Cooper <andrew.cooper3@citrix.com>
Acked-by: George Dunlap <george.dunlap@citrix.com>
Reviewed-by: Paul Durrant <paul.durrant@citrix.com>
Acked-by: Elena Ufimtseva <elena.ufimtseva@oracle.com>
Reviewed-by: Kevin Tian <kevin.tian@intel.com>
---
Changes since v1:
 - Remove dom0pvh option from the command line docs.
 - Bump domctl interface version due to the removed CDF flag.
 - Introduce LIBXL_DOMAIN_TYPE_PVH.
 - Remove "none" from the valid device model version options.
 - Update the xl.cfg(5) man page to reflect the changes.

---
Cc: Ian Jackson <ian.jackson@eu.citrix.com>
Cc: Wei Liu <wei.liu2@citrix.com>
Cc: Elena Ufimtseva <elena.ufimtseva@oracle.com>
Cc: Jan Beulich <jbeulich@suse.com>
Cc: Andrew Cooper <andrew.cooper3@citrix.com>
Cc: Paul Durrant <paul.durrant@citrix.com>
Cc: Jun Nakajima <jun.nakajima@intel.com>
Cc: Kevin Tian <kevin.tian@intel.com>
Cc: George Dunlap <george.dunlap@eu.citrix.com>
Cc: Razvan Cojocaru <rcojocaru@bitdefender.com>
Cc: Tamas K Lengyel <tamas@tklengyel.com>

--- a/docs/man/xl.cfg.pod.5.in
+++ b/docs/man/xl.cfg.pod.5.in
@@ -1064,6 +1064,13 @@ FIFO-based event channel ABI support up to 131,071 event channels.
 Other guests are limited to 4095 (64-bit x86 and ARM) or 1023 (32-bit
 x86).
 
+=item B<pvh=BOOLEAN>
+
+Selects whether to create a PVH guest. This requires providing a kernel
+on the config file or using a boot loader or firmware.
+
+Default is 0.
+
 =back
 
 =head2 Paravirtualised (PV) Guest Specific Options
@@ -1107,10 +1114,6 @@ to hotplug devices later then you should set this option. Conversely
 if your particular guest kernel does not require this behaviour then
 it is safe to allow this to be enabled but you may wish to disable it
 anyway.
-
-=item B<pvh=BOOLEAN>
-
-Selects whether to run this PV guest in an HVM container. Default is 0.
 
 =back
 
@@ -1924,11 +1927,6 @@ This device-model is the default for Linux dom0.
 
 Use the device-model based upon the historical Xen fork of Qemu.
 This device-model is still the default for NetBSD dom0.
-
-=item B<none>
-
-Don't use any device model. This requires a kernel capable of booting
-without emulated devices.
 
 =back
 
